--- a/index.html
+++ b/index.html
@@ -376,29 +376,46 @@
             </svg></button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
-                <label class="modal-label" for="user-name">Name</label>
-                <div class="modal-wrap-input">
-                    <input class="modal-input" type="text" name="user-name" id="user-name">
-                    <svg class="modal-input-svg" width="18" height="24"> 
-                        <use href="./images/icons.svg#icon-person-black"></use>
-                    </svg>
+                <div class="modal-wrap-label">
+                    <label class="modal-label" for="user-name">Name</label>
+                    <div class="modal-wrap-input">
+                        <input class="modal-input" type="text" name="user-name" id="user-name" autofocus>
+                        <svg class="modal-input-svg" width="18" height="24"> 
+                            <use href="./images/icons.svg#icon-person-black"></use>
+                        </svg>
+                    </div>
                 </div>
-                <label class="modal-label" for="user-tel">Phone</label>
-                <div class="modal-wrap-input">
-                    <input class="modal-input" type="tel" name="user-tel" id="user-tel">
-                    <svg class="modal-input-svg" width="18" height="24"> 
-                        <use href="./images/icons.svg#icon-phone-black"></use>
-                    </svg>
+                <div class="modal-wrap-label">
+                    <label class="modal-label" for="user-tel">Phone</label>
+                    <div class="modal-wrap-input">
+                        <input class="modal-input" type="tel" name="user-tel" id="user-tel">
+                        <svg class="modal-input-svg" width="18" height="24"> 
+                            <use href="./images/icons.svg#icon-phone-black"></use>
+                        </svg>
+                    </div>
                 </div>
-                <label class="modal-label" for="user-email">Email</label>
-                <div class="modal-wrap-input">
-                    <input class="modal-input" type="email" name="user-email" id="user-email">
-                    <svg class="modal-input-svg" width="18" height="24"> 
-                        <use href="./images/icons.svg#icon-email-black"></use>
-                    </svg>
+                <div class="modal-wrap-label">
+                    <label class="modal-label" for="user-email">Email</label>
+                    <div class="modal-wrap-input">
+                        <input class="modal-input" type="email" name="user-email" id="user-email">
+                        <svg class="modal-input-svg" width="18" height="24"> 
+                            <use href="./images/icons.svg#icon-email-black"></use>
+                        </svg>
+                    </div>
                 </div>
+                <div class="modal-comment-wrap">
                     <label class="modal-label" for="user-comment">Comment</label>
                     <textarea class="modal-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+                </div>
+                <div class="modal-check-wrap">
+                    <input class="modal-check visually-hidden" type="checkbox" name="policy" id="policy" value="true">
+                    <label class="label-text" for="policy">
+                        <span>
+                            <svg class="modal-check-svg" width="10" height="8">
+                                <use href="./images/icons.svg#icon-true"></use>
+                            </svg>
+                        </span>I accept the terms and conditions of the <a class="policy-link" href="">Privacy Policy</a></label>
+                </div>
             </form>
             <button class="modal-btn-send" type="submit">Send</button>
         </div>
