--- a/index.html
+++ b/index.html
@@ -367,9 +367,23 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-subscribe">
+                <p class="footer-subscribe-text">Subscribe</p>
+                <div class="footer-interactiv">
+                    <form class="footer-form">
+                        <label for=""></label>
+                        <input class="footer-email" type="email" name="footer-email" placeholder="E-mail">
+                    </form>
+                    <button class="footer-btn" type="submit">Subscribe
+                        <svg class="footer-btn-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-airplane"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button class="modal-btn-x" type="button"><svg class="modal-x-svg" width="8" height="8">
                 <use href="./images/icons.svg#icon-close-black"></use>
