--- a/index.html
+++ b/index.html
@@ -369,17 +369,15 @@
             </div>
             <div class="footer-subscribe">
                 <p class="footer-subscribe-text">Subscribe</p>
-                <div class="footer-interactiv">
                     <form class="footer-form">
-                        <label for=""></label>
-                        <input class="footer-email" type="email" name="footer-email" placeholder="E-mail">
+                        <label class="footer-label">
+                        <input class="footer-email" type="email" name="footer-email" placeholder="E-mail"></label>
+                        <button class="footer-btn" type="submit">Subscribe
+                            <svg class="footer-btn-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-airplane"></use>
+                            </svg>
+                        </button>
                     </form>
-                    <button class="footer-btn" type="submit">Subscribe
-                        <svg class="footer-btn-svg" width="24" height="24">
-                            <use href="./images/icons.svg#icon-airplane"></use>
-                        </svg>
-                    </button>
-                </div>
             </div>
         </div>
     </footer>
@@ -422,16 +420,16 @@
                     <textarea class="modal-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-check-wrap">
-                    <input class="modal-check visually-hidden" type="checkbox" name="policy" id="policy" value="true">
-                    <label class="label-text" for="policy">
-                        <span>
+                    <input class="modal-check visually-hidden" type="checkbox" name="user-policy" id="user-policy" value="true">
+                    <label class="label-text" for="user-policy">
+                        <span class="label-text-checkbox">
                             <svg class="modal-check-svg" width="10" height="8">
                                 <use href="./images/icons.svg#icon-true"></use>
                             </svg>
                         </span>I accept the terms and conditions of the <a class="policy-link" href="">Privacy Policy</a></label>
                 </div>
+                <button class="modal-btn-send" type="submit">Send</button>
             </form>
-            <button class="modal-btn-send" type="submit">Send</button>
         </div>
     </div>
 </body>
