change name in form

--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
                     <textarea class="modal-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-check-wrap">
-                    <input class="modal-check visually-hidden" type="checkbox" name="user-policy" id="user-policy" value="true">
-                    <label class="label-text" for="user-policy">
+                    <input class="modal-check visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
+                    <label class="label-text" for="user-privacy">
                         <span class="label-text-checkbox">
                             <svg class="modal-check-svg" width="10" height="8">
                                 <use href="./images/icons.svg#icon-true"></use>
